# rtl8762c-ble-uart

./: Makefile  README.md  app.ld  app_flags.h  app_task.c  app_task.h  board.h  download.ini  flash_map.h  main.c  mem_config.h  otp_config.h  peripheral_app.c  peripheral_app.h  simple_ble_service.c  simple_ble_service.h  uart.c  uart.h
host-term/: Cargo.toml  README.md  lib.rs  main.rs
qt/: bleserial.cpp  bleserial.h
