[package]
name = "rtl8762c-ble-uart-host"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = "0.11.5"
# btleplug = { path = "./btleplug-0.11.5" }

futures = "0.3.30"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
async-stream = "0.3.5"
uuid = "1.10.0"
hex = "0.4.3"

[lib]
name = "rtl8762c_ble_uart_host"
path = "lib.rs"

[features]
# default = ["ble_dbg"]
ble_dbg = []

[[bin]]
name = "rtl8762c-bleser"
path = "main.rs"
